--- a/hw/WEB-INF/web.xml
+++ b/hw/WEB-INF/web.xml
@@ -51,4 +51,44 @@
     <servlet-name>LoginPage</servlet-name>
     <url-pattern>/LoginPage</url-pattern>
   </servlet-mapping>
+
+  <servlet>
+    <servlet-name>SignupPage</servlet-name>
+    <servlet-class>SignupPage</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>SignupPage</servlet-name>
+    <url-pattern>/SignupPage</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>LoginServlet</servlet-name>
+    <servlet-class>LoginServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>LoginServlet</servlet-name>
+    <url-pattern>/LoginServlet</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>LogoutServlet</servlet-name>
+    <servlet-class>LogoutServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>LogoutServlet</servlet-name>
+    <url-pattern>/LogoutServlet</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>SignupServlet</servlet-name>
+    <servlet-class>SignupServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>SignupServlet</servlet-name>
+    <url-pattern>/SignupServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
